syntax = "proto3";

package hero;

service HeroesService {
  rpc Create (CreateHero) returns (Hero) {}
  rpc FindOne (HeroById) returns (Hero) {}
  rpc FindAll (Empty) returns (stream Hero) {}
}

message Hero {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message HeroById {
  int32 id = 1;
}

message CreateHero{
  string firstName = 1;
  string lastName = 2;
}

message Empty{

}

